<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    tools:context="kmitl.kawin58070006.horyuni.controller.fragment.HomeFragment">




    <android.support.v7.widget.RecyclerView
        android:id="@+id/listViewImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />



</LinearLayout>
